--- a/src/ObstacleCourse.css
+++ b/src/ObstacleCourse.css
@@ -8,21 +8,10 @@
     overflow: hidden;
   }
   
-  /* Media Chrome styling */
-  .player-container media-controller {
+  /* Make the Mux player fill the container */
+  .player-container mux-player {
     width: 100%;
     height: 100%;
-    --media-primary-color: #FF7A00;
-    --media-secondary-color: #FFD166;
-    --media-control-background: rgba(0, 0, 0, 0.6);
-    --media-control-hover-background: rgba(30, 30, 30, 0.8);
-  }
-  
-  /* Make sure video fills the container */
-  .player-container video {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
   }
   
   /* Overlay that sits on top of the video */
