--- a/src/ObstacleCourse.css
+++ b/src/ObstacleCourse.css
@@ -1,4 +1,3 @@
-/* Base container for the player */
 .player-container {
   position: relative;
   width: 100%;
@@ -275,3 +274,69 @@
     font-size: 22px;
   }
 }
+
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  overflow: hidden;
+}
+
+.custom-media-controls {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 5px;
+  transition: opacity 0.3s;
+  z-index: 5;
+}
+
+.video-container:hover .custom-media-controls {
+  opacity: 1;
+}
+
+.video-container:not(:hover) .custom-media-controls {
+  opacity: 0.3;
+}
+
+/* Timeline controls */
+.timeline-controls {
+  display: flex;
+  width: 100%;
+  padding: 5px 10px;
+}
+
+.media-time-range {
+  flex-grow: 1;
+  height: 10px;
+  -webkit-appearance: none;
+  appearance: none;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  outline: none;
+}
+
+.media-time-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: #FF7A00;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.media-time-range::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: #FF7A00;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+}
+
+
