--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,27 @@ footer {
   80%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
   100% { transform: scale(1)   translate(10px, -30px); }
 }
+
+.console-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(159, 255, 103);
+  width: 80px;
+  height: 20px;
+  padding: 10px;
+  border-radius: 5rem;
+  height: 60px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: large;
+  font-weight:bolder;
+}
+
+.console-button:active {
+  transform: scale(0.9);
+}
+
+.console-button:hover {
+  background-color: black;
+}
+
